<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="@color/card"
    app:cardCornerRadius="17dp"
    app:cardElevation="3dp"
    app:cardUseCompatPadding="true"
    app:contentPadding="3dp">

    <RelativeLayout
        android:id="@+id/main_relative"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true">


        <TextView
            android:id="@+id/card_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="2dp"
            android:text="@string/start_hid"
            android:textColor="@color/colorPrimaryWhite"
            android:textSize="18sp"
            tools:ignore="RelativeOverlap" />

        <TextView
            android:id="@+id/card_title_desc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/card_title"
            android:paddingStart="5dp"
            android:paddingEnd="80dp"
            android:paddingBottom="15dp"
            android:text="@string/please_click_run_button_manually"
            android:textColor="@color/colorPrimaryWhite" />

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:paddingTop="20dp"
            android:paddingEnd="10dp"
            android:paddingBottom="20dp"
            tools:ignore="RtlSymmetry">

            <Button
                android:id="@+id/card_run_button"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:background="@drawable/button"
                android:text="@string/card_run_button"
                android:layout_marginBottom="25dp"
                android:textColor="@color/colorPrimaryWhite" />

            <Button
                android:id="@+id/card_edit_button"
                android:layout_width="60dp"
                android:layout_height="25dp"
                android:layout_below="@id/card_run_button"
                android:background="@drawable/button"
                android:text="@string/card_edit_button"
                android:textColor="@color/colorPrimaryWhite" />

        </RelativeLayout>
    </RelativeLayout>



</androidx.cardview.widget.CardView>